tests/rosetta/out/Fortran/call-a-function-7.error
gfortran: exit status 1
/tmp/call-a-function-7.f90:8:14:

    8 |     res = (/0,0.0/)
      |              1
Error: Element in INTEGER(4) array constructor at (1) is REAL(4)
