tests/rosetta/out/Fortran/call-a-function-7.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program call_a_function_7
  implicit none
  call main()
  
  contains
  recursive integer function f() result(res)
    res = (/0,0.0/)
    return
  end function f
  recursive integer function g(a,b) result(res)
    integer, intent(in) :: a
    real, intent(in) :: b
    res = 0
    return
  end function g
  recursive subroutine h(s,nums)
    character(len=100), intent(in) :: s
    integer, intent(in) :: nums
  end subroutine h
  recursive subroutine main()
    if ((((2 * g(1,3.0)) + 4) > 0)) then
    end if
  end subroutine main
end program call_a_function_7
